--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,4 +1,4 @@
-name: Unit workflow
+name: Unit Test
 
 on:
   push:
@@ -16,12 +16,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
       - name: "Setup Node.js v16.18"
-        uses: actions/setup-node@v2
+        uses: actions/setup-node@v3
         with:
-          node-version: 16.18
+          node-version: 18.x
       - name: "npm clean install"
         run: npm ci
       - name: "tests begin"
         run: npm test
+      - name: Report success or failure
+        if: ${{ always() }}
+        run: echo "Tests completed"
       - name: "Process Ended"
         run: echo "Ending test..."
