--- a/package.json
+++ b/package.json
@@ -8,12 +8,18 @@
     "test": "jest --coverage"
   },
   "dependencies": {
+    "@testing-library/jest-dom": "^6.5.0",
+    "@testing-library/react": "^16.0.1",
+    "@testing-library/user-event": "^14.5.2",
     "jest": "^29.7.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
     "@vitejs/plugin-react": "^4.0.0",
+    "jest-environment-jsdom": "^29.7.0",
     "vite": "^4.3.9"
   },
   "keywords": [],
